--- a/client/package.json
+++ b/client/package.json
@@ -21,5 +21,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   },
+  "engines" : { 
+    "npm" : "10.7.0",
+    "node" : "22.2.0"
+  },
   "packageManager": "yarn@3.6.1+sha512.de524adec81a6c3d7a26d936d439d2832e351cdfc5728f9d91f3fc85dd20b04391c038e9b4ecab11cae2b0dd9f0d55fd355af766bc5c1a7f8d25d96bb2a0b2ca"
 }
